# smart-library-patch

./: README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
docs/: BUILD_INSTRUCTIONS.md  DESIGN_TRANSFORMATION.md  LOGIN_THEME_FIXES.md  Tauri_Desktop_Setup.md
public/: manifest.json  sw.js
scripts/: tauri-setup.bat  tauri-setup.sh  verify-build.js
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/commands/: whatsapp-desktop.ts  whatsapp.ts
src-tauri/src/: main.rs
src-tauri/src/commands/: mod.rs  whatsapp.rs
src-tauri/whatsapp/: mod.rs
src/components/admin/: AdminPanel.tsx
src/components/ambient/: AmbientSoundControl.tsx
src/components/auth/: ForgotPasswordModal.tsx  LoginPage.tsx
src/components/dashboard/: DashboardPanel.tsx
src/components/fees/: DueFeeSlipPanel.tsx  DueFeesPanel.tsx  GlassDueFeeSlipPanel.tsx  HistoryPanel.tsx
src/components/glass/: GlassButton.tsx  GlassCard.tsx  GlassLayout.tsx  GlassNavigation.tsx  LiquidButton.tsx  LiquidGlassCard.tsx
src/components/income/: ExpensesPanel.tsx  FeesOverviewPanel.tsx  GlassIncomeExpensePanel.tsx  IncomeExpensePanel.tsx  NetIncomePanel.tsx
src/components/layout/: AppLayout.tsx  BrandFooter.tsx  NavBar.tsx
src/components/notifications/: NotificationCenter.tsx
src/hooks/: useWhatsAppDesktopService.ts  useWhatsAppService.ts
src/lib/: database.ts
src/pages/: Index.tsx  SettingsPage.tsx  UpgradedIndex.tsx
src/services/: whatsappBackend.js
src/store/: whatsappStore.ts
src/types/: database.ts  three-augments.d.ts  whatsapp.ts
src/utils/: backup.ts  exportUtils.ts  hash.ts  logger.ts  pdfGenerator.ts  phone.ts  printExport.ts  receiptGenerator.ts  receiptStorage.ts  receiptUtils.ts  seatAllocation.ts  whatsappAutomation.ts  whatsappBridge.ts  whatsappClient.ts  whatsappDesktop.ts
tauri-config/: tauri.conf.json
(+47 files in other folders)
