[package]
name = "student-management-app"
version = "0.0.0"
description = "A Tauri App for Student Management"
authors = ["you"]
license = ""
repository = ""
default-run = "student-management-app"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0", features = [ "shell-open"] }
urlencoding = "2.1"

[features]
custom-protocol = [ "tauri/custom-protocol" ]